[20160906] - not found page modified

--- a/not_found.html
+++ b/not_found.html
@@ -24,7 +24,7 @@
 					<div class="not-found">
 						<strong>The page you requested is not available</strong>
 						<p>Sorry, We are having a problem executing your request.<br />The page you requested could not be found.</p>
-						<a href="/wds/index.html" class="btn-bracket">Go to Home</a>
+						<a href="./index.html" class="btn-bracket">Go to Home</a>
 					</div>
 				</div><!-- // contents -->
 			</div><!-- // inner -->
